@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6297 2004/06/24 11:11:11 markd Exp $
+$NetBSD: CHANGES,v 1.6298 2004/06/24 14:45:44 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3042,3 +3042,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated firefox-gtk2 to 0.9 [taya 2004-06-24]
 	Updated w3m to 0.5.1 [cjep 2004-06-24]
 	Updated R to 1.9.1 [markd 2004-06-24]
+	Updated mit-krb5 to 1.3.4 [jlam 2004-06-24]
